syntax = "proto3";
package paxos;
option go_package = "./proto";

service PaxosNode {
  // Client operations
  rpc SubmitTransaction(TransactionRequest) returns (TransactionReply);
  rpc QueryBalance(BalanceQueryRequest) returns (BalanceQueryReply);
  
  // Paxos Phase 1: Leader Election
  rpc Prepare(PrepareRequest) returns (PromiseReply);
  
  // Paxos Phase 2: Consensus
  rpc Accept(AcceptRequest) returns (AcceptedReply);
  rpc Commit(CommitRequest) returns (CommitReply);
  
  // Leader change
  rpc NewView(NewViewRequest) returns (NewViewReply);
  
  // Checkpointing
  rpc Checkpoint(CheckpointRequest) returns (CheckpointReply);
  rpc GetCheckpoint(GetCheckpointRequest) returns (GetCheckpointReply);
  
  // Status and CLI
  rpc GetStatus(StatusRequest) returns (StatusReply);
  
  // Node control
  rpc SetActive(SetActiveRequest) returns (SetActiveReply);
  
  // Recovery - request specific log entry from peers
  rpc GetLogEntry(GetLogEntryRequest) returns (GetLogEntryReply);
  
  // Two-Phase Commit (2PC) for cross-shard transactions
  rpc TwoPCPrepare(TwoPCPrepareRequest) returns (TwoPCPrepareReply);
  rpc TwoPCCommit(TwoPCCommitRequest) returns (TwoPCCommitReply);
  rpc TwoPCAbort(TwoPCAbortRequest) returns (TwoPCAbortReply);
  
  // Phase 7: Utility functions for debugging and monitoring
  rpc PrintBalance(PrintBalanceRequest) returns (PrintBalanceReply);
  rpc PrintDB(PrintDBRequest) returns (PrintDBReply);
  rpc PrintView(PrintViewRequest) returns (PrintViewReply);
  rpc GetPerformance(GetPerformanceRequest) returns (GetPerformanceReply);
  
  // Phase 9: Shard redistribution / data migration
  rpc MigrationPrepare(MigrationPrepareRequest) returns (MigrationPrepareReply);
  rpc MigrationGetData(MigrationGetDataRequest) returns (MigrationGetDataReply);
  rpc MigrationSetData(MigrationSetDataRequest) returns (MigrationSetDataReply);
  rpc MigrationCommit(MigrationCommitRequest) returns (MigrationCommitReply);
  rpc MigrationRollback(MigrationRollbackRequest) returns (MigrationRollbackReply);
  rpc GetAccessStats(GetAccessStatsRequest) returns (GetAccessStatsReply);
  rpc TriggerRebalance(TriggerRebalanceRequest) returns (TriggerRebalanceReply);
  rpc PrintReshard(PrintReshardRequest) returns (PrintReshardReply);
  
  // System control
  rpc FlushState(FlushStateRequest) returns (FlushStateReply);
}

// Ballot number
message Ballot {
  int32 number = 1;
  int32 node_id = 2;
}

// Transaction - changed to use data item IDs instead of client names
message Transaction {
  int32 sender = 1;      // Data item ID (1-9000)
  int32 receiver = 2;    // Data item ID (1-9000)
  int32 amount = 3;
}

// Client request
message TransactionRequest {
  string client_id = 1;
  int64 timestamp = 2;
  Transaction transaction = 3;
}

// ADD THIS ENUM
enum ResultType {
  SUCCESS = 0;
  FAILED = 1;
  INSUFFICIENT_BALANCE = 2;
}

// CHANGE THIS - use ResultType instead of string
message TransactionReply {
  bool success = 1;
  string message = 2;
  Ballot ballot = 3;
  ResultType result = 4;  // Changed from string to ResultType
}

// Phase 3: Read-only transactions (balance queries)
message BalanceQueryRequest {
  int32 data_item_id = 1;  // Which data item to query
}

message BalanceQueryReply {
  bool success = 1;
  int32 balance = 2;       // Current balance
  string message = 3;      // Error message if any
  int32 node_id = 4;       // Which node responded
  int32 cluster_id = 5;    // Which cluster this item belongs to
}

// Phase 1: Prepare/Promise
message PrepareRequest {
  Ballot ballot = 1;
  int32 node_id = 2;
}

message AcceptedEntry {
  Ballot ballot = 1;
  int32 sequence_number = 2;
  TransactionRequest request = 3;
  bool is_noop = 4;
}

message PromiseReply {
  bool success = 1;
  Ballot ballot = 2;
  repeated AcceptedEntry accept_log = 3;
  int32 node_id = 4;
  int32 checkpoint_seq = 5;  // Sequence number of latest checkpoint
}

// Phase 2: Accept/Accepted
message AcceptRequest {
  Ballot ballot = 1;
  int32 sequence_number = 2;
  TransactionRequest request = 3;
  bool is_noop = 4;
}

message AcceptedReply {
  bool success = 1;
  Ballot ballot = 2;
  int32 sequence_number = 3;
  int32 node_id = 4;
}

// Commit
message CommitRequest {
  Ballot ballot = 1;
  int32 sequence_number = 2;
  TransactionRequest request = 3;
  bool is_noop = 4;
}

message CommitReply {
  bool success = 1;
}

// New View (after leader election)
message NewViewRequest {
  Ballot ballot = 1;
  repeated AcceptRequest accept_messages = 2;
  int32 checkpoint_seq = 3;  // Highest checkpoint from promise quorum
}

message NewViewReply {
  bool success = 1;
  int32 node_id = 2;
}

// Checkpointing
message CheckpointRequest {
  int32 sequence_number = 1;  // Last request reflected in state
  map<string, int32> state = 2;  // Client balances (actual state, not digest)
  int32 leader_id = 3;
}

message CheckpointReply {
  bool success = 1;
  int32 node_id = 2;
}

message GetCheckpointRequest {
  int32 node_id = 1;  // Requesting node
}

message GetCheckpointReply {
  bool success = 1;
  int32 sequence_number = 2;
  map<string, int32> state = 3;
}

// Status
message StatusRequest {
  int32 node_id = 1;
}

message StatusReply {
  int32 node_id = 1;
  bool is_leader = 2;
  int32 current_ballot_number = 3;
  int32 current_leader_id = 4;
  int32 next_sequence_number = 5;
  int32 transactions_received = 6;
}

// Node control
message SetActiveRequest {
  int32 node_id = 1;
  bool active = 2;  // true = active, false = inactive
}

message SetActiveReply {
  bool success = 1;
  int32 node_id = 2;
  bool active = 3;  // Current active status
}

// Recovery - request specific log entry
message GetLogEntryRequest {
  int32 node_id = 1;  // Requesting node
  int32 sequence_number = 2;  // Which sequence to retrieve
}

message GetLogEntryReply {
  bool success = 1;
  AcceptedEntry entry = 2;  // The requested log entry
}

// ============================================================================
// TWO-PHASE COMMIT (2PC) FOR CROSS-SHARD TRANSACTIONS
// ============================================================================

// Phase 1: PREPARE - Coordinator asks all participants if they can commit
message TwoPCPrepareRequest {
  string transaction_id = 1;    // Unique transaction ID
  Transaction transaction = 2;   // The transaction to prepare
  string client_id = 3;          // Client making the request
  int64 timestamp = 4;           // Request timestamp
  int32 coordinator_id = 5;      // Which node is coordinating
}

message TwoPCPrepareReply {
  bool success = 1;              // true = PREPARED, false = ABORT
  string transaction_id = 2;     // Echo transaction ID
  string message = 3;            // Reason if failed
  int32 participant_id = 4;      // Which participant is responding
}

// Phase 2: COMMIT - Coordinator tells all participants to commit
message TwoPCCommitRequest {
  string transaction_id = 1;     // Which transaction to commit
  int32 coordinator_id = 2;      // Which node is coordinating
}

message TwoPCCommitReply {
  bool success = 1;              // true if committed successfully
  string transaction_id = 2;     // Echo transaction ID
  string message = 3;            // Status message
  int32 participant_id = 4;      // Which participant is responding
}

// Phase 2: ABORT - Coordinator tells all participants to rollback
message TwoPCAbortRequest {
  string transaction_id = 1;     // Which transaction to abort
  int32 coordinator_id = 2;      // Which node is coordinating
  string reason = 3;             // Why we're aborting
}

message TwoPCAbortReply {
  bool success = 1;              // true if aborted successfully
  string transaction_id = 2;     // Echo transaction ID
  string message = 3;            // Status message
  int32 participant_id = 4;      // Which participant is responding
}

// ============================================================================
// PHASE 7: UTILITY FUNCTIONS FOR DEBUGGING AND MONITORING
// ============================================================================

// PrintBalance - Query balance of a specific data item or range
message PrintBalanceRequest {
  int32 start_item = 1;          // Start of range (0 = first item in shard)
  int32 end_item = 2;            // End of range (0 = last item in shard)
  bool summary_only = 3;         // If true, return summary stats only
}

message BalanceEntry {
  int32 data_item = 1;
  int32 balance = 2;
}

message PrintBalanceReply {
  bool success = 1;
  repeated BalanceEntry balances = 2;
  int32 total_items = 3;
  int64 total_balance = 4;
  int32 min_balance = 5;
  int32 max_balance = 6;
  int32 node_id = 7;
  int32 cluster_id = 8;
}

// PrintDB - Display full database state for this node's shard
message PrintDBRequest {
  bool include_zero_balance = 1;  // Include items with 0 balance
  int32 limit = 2;                // Max items to return (0 = all)
}

message PrintDBReply {
  bool success = 1;
  repeated BalanceEntry balances = 2;
  int32 total_items = 3;
  int32 shard_start = 4;
  int32 shard_end = 5;
  int32 node_id = 6;
  int32 cluster_id = 7;
  string message = 8;
}

// PrintView - Show current Paxos state/view
message PrintViewRequest {
  bool include_log = 1;           // Include recent log entries
  int32 log_entries = 2;          // How many log entries (default 10)
}

message LogEntrySummary {
  int32 sequence = 1;
  int32 sender = 2;
  int32 receiver = 3;
  int32 amount = 4;
  string client_id = 5;
  bool executed = 6;
}

message PrintViewReply {
  bool success = 1;
  int32 node_id = 2;
  int32 cluster_id = 3;
  bool is_leader = 4;
  int32 leader_id = 5;
  int32 ballot_number = 6;
  int32 ballot_node_id = 7;
  int32 next_sequence = 8;
  int32 last_executed = 9;
  repeated LogEntrySummary recent_log = 10;
  bool is_active = 11;
  string message = 12;
}

// GetPerformance - Retrieve performance metrics
message GetPerformanceRequest {
  bool reset_counters = 1;        // Reset counters after reading
}

message GetPerformanceReply {
  bool success = 1;
  int32 node_id = 2;
  int32 cluster_id = 3;
  
  // Transaction counters
  int64 total_transactions = 4;
  int64 successful_transactions = 5;
  int64 failed_transactions = 6;
  
  // 2PC counters
  int64 twopc_coordinator = 7;
  int64 twopc_participant = 8;
  int64 twopc_commits = 9;
  int64 twopc_aborts = 10;
  
  // Timing (milliseconds)
  double avg_transaction_time_ms = 11;
  double avg_2pc_time_ms = 12;
  
  // Paxos counters
  int64 elections_started = 13;
  int64 elections_won = 14;
  int64 proposals_made = 15;
  int64 proposals_accepted = 16;
  
  // Lock counters
  int64 locks_acquired = 17;
  int64 locks_timeout = 18;
  
  // Uptime
  int64 uptime_seconds = 19;
  
  string message = 20;
}

// ============================================================================
// PHASE 9: SHARD REDISTRIBUTION / DATA MIGRATION
// ============================================================================

// Migration Prepare - Lock items before migration
message MigrationPrepareRequest {
  string migration_id = 1;
  int32 cluster_id = 2;              // Which cluster is being prepared
  repeated int32 item_ids = 3;       // Items to prepare for migration
  map<int32, int32> target_clusters = 4;  // item_id -> target_cluster
}

message MigrationPrepareReply {
  bool success = 1;
  string migration_id = 2;
  string message = 3;
  repeated int32 prepared_items = 4;  // Items that were successfully prepared
}

// Migration Get Data - Retrieve data items for transfer
message MigrationGetDataRequest {
  string migration_id = 1;
  repeated int32 item_ids = 2;       // Items to retrieve
}

message MigrationDataItem {
  int32 item_id = 1;
  int32 balance = 2;
}

message MigrationGetDataReply {
  bool success = 1;
  string migration_id = 2;
  repeated MigrationDataItem items = 3;
  string message = 4;
}

// Migration Set Data - Store data items on target cluster
message MigrationSetDataRequest {
  string migration_id = 1;
  int32 source_cluster = 2;
  repeated MigrationDataItem items = 3;
}

message MigrationSetDataReply {
  bool success = 1;
  string migration_id = 2;
  string message = 3;
}

// Migration Commit - Finalize migration
message MigrationCommitRequest {
  string migration_id = 1;
  int32 cluster_id = 2;
}

message MigrationCommitReply {
  bool success = 1;
  string migration_id = 2;
  string message = 3;
}

// Migration Rollback - Undo migration
message MigrationRollbackRequest {
  string migration_id = 1;
  int32 cluster_id = 2;
}

message MigrationRollbackReply {
  bool success = 1;
  string migration_id = 2;
  string message = 3;
}

// Get Access Statistics - For monitoring access patterns
message GetAccessStatsRequest {
  bool reset = 1;                    // Reset stats after reading
}

message CoAccessPair {
  int32 item1 = 1;
  int32 item2 = 2;
  int64 count = 3;
}

message GetAccessStatsReply {
  bool success = 1;
  int64 total_transactions = 2;
  int64 cross_shard_transactions = 3;
  double cross_shard_ratio = 4;
  int64 unique_items_accessed = 5;
  repeated CoAccessPair top_co_access = 6;  // Top co-accessed pairs
  string message = 7;
}

// Trigger Rebalance - Initiate shard rebalancing
message TriggerRebalanceRequest {
  bool dry_run = 1;                  // If true, compute but don't execute
  int32 min_gain = 2;                // Minimum gain threshold for moves
  double max_imbalance = 3;          // Maximum partition imbalance (0-1)
}

message MigrationMove {
  int32 item_id = 1;
  int32 from_cluster = 2;
  int32 to_cluster = 3;
  int64 estimated_gain = 4;
}

message TriggerRebalanceReply {
  bool success = 1;
  string migration_id = 2;           // If executed, the migration ID
  int64 initial_cut = 3;             // Cross-shard transactions before
  int64 final_cut = 4;               // Cross-shard transactions after
  double cut_reduction = 5;          // Percentage reduction
  int32 items_to_move = 6;
  repeated MigrationMove moves = 7;  // Planned/executed moves
  string message = 8;
}

// PrintReshard - Trigger resharding and output triplets
message PrintReshardRequest {
  bool execute = 1;                  // If true, execute migration; if false, dry run
  int32 min_gain = 2;                // Minimum gain threshold
}

message ReshardTriplet {
  int32 item_id = 1;                 // Data item being moved
  int32 from_cluster = 2;            // Source cluster
  int32 to_cluster = 3;              // Destination cluster
}

message PrintReshardReply {
  bool success = 1;
  repeated ReshardTriplet triplets = 2;  // List of (item, from, to) triplets
  string message = 3;
}

// FlushState - Reset all node state between test sets
message FlushStateRequest {
  bool reset_database = 1;           // Reset database to initial state
  bool reset_logs = 2;               // Clear Paxos logs
  bool reset_ballot = 3;             // Reset ballot to initial
}

message FlushStateReply {
  bool success = 1;
  string message = 2;
}